src/objects/dh_superclone__CloneConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>dh_superclone__AfterDisplay__c</fullName>
        <inlineHelpText>Record List - display a list of new records
First Record (default) - display the first new record
Original Record - display the source record
Object Page - display default object list view</inlineHelpText>
        <label>After Clone Display</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Record List</fullName>
                </value>
                <value>
                    <fullName>First Record</fullName>
                    <default>true</default>
                    <label>First Record</label>
                </value>
                <value>
                    <fullName>Original Record</fullName>
                </value>
                <value>
                    <fullName>Object Page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dh_superclone__AllowCloningMultipleTimes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allow the user to enter the number of times a record will be cloned.</inlineHelpText>
        <label>Allow Cloning Multiple Times</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dh_superclone__ConfigurationName__c</fullName>
        <description>Unique name for the configuration settings.</description>
        <label>Configuration Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>dh_superclone__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>dh_superclone__ExtID__c</fullName>
        <description>External ID used to help export configurations from an Org and insert them into a different Org.</description>
        <externalId>true</externalId>
        <label>ExtID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dh_superclone__PrimaryObjectLabel__c</fullName>
        <label>Primary Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dh_superclone__PrimaryObjectName__c</fullName>
        <label>Primary Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dh_superclone__ShowDetailedErrorMessage__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If an error occurs while cloning, display the Apex exception message.</inlineHelpText>
        <label>Show Detailed Error Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dh_superclone__SkipCloneConfirmationPage__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The page to select or deselect child object records is bypassed unless there are errors in the cloning process.</inlineHelpText>
        <label>Skip Clone Confirmation Page</label>
        <type>Checkbox</type>
    </fields>
    <label>Clone Configuration</label>
    <listViews>
        <fullName>dh_superclone__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>dh_superclone__ConfigurationName__c</columns>
        <columns>NAME</columns>
        <columns>dh_superclone__PrimaryObjectName__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C{0000}</displayFormat>
        <label>Clone Index</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clone Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>